# Proyecto-Estru-1

./: CMakeLists.txt  COSAS QUIE FALTA PROYECTO.txt  HistoryNode.h  directory.cpp  directory.h  explorer.cpp  explorer.h  explorer.ui  file.cpp  file.h  filesystem.cpp  filesystem.h  historylist.cpp  historylist.h  historynode.cpp  historynode.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp  node.h  notepad.cpp  notepad.h  notepad.ui  originfile.cpp  originfile.h
